--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
-    "dev":"nodemon server"
+    "dev": "nodemon server"
   },
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.1",
     "nodemon": "^3.0.1"
